<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdoptguideActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_adoptTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:gravity="center"
                android:text="입양안내"
                android:textAllCaps="false"
                android:textColor="@color/iphone_orange"
                android:textSize="30sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="#F3F3F3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adopt_first"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/hjm_black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adopt_first_content1"
                    android:textSize="17sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/iphone_space_gray"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="#F3F3F3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adopt_second"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/hjm_black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adopt_second_content1"
                    android:textSize="17sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/iphone_space_gray"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="#F3F3F3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adopt_third"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/hjm_black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adopt_third_content1"
                    android:textSize="17sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/iphone_space_gray"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="#F3F3F3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adopt_fourth"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/hjm_black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adopt_fourth_content1"
                    android:textSize="17sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/iphone_space_gray"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adopt_fourth_content2"
                    android:textSize="17sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/iphone_space_gray"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:background="#F3F3F3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adopt_fifth"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/hjm_black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adopt_fifth_content1"
                    android:textSize="17sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/iphone_space_gray"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adopt_fifth_content2"
                    android:textSize="17sp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/iphone_space_gray"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="30dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_mapo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="마포센터 안내"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/iphone_blue"/>

                <Button
                    android:id="@+id/btn_guri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="구리센터 안내"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:backgroundTint="@color/iphone_blue"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>