<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lighter"
    tools:context=".MapoguideActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mapo_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.Material3.NavigationView"
        android:background="#F8F0E5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            app:srcCompat="@drawable/leaf" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mung \u0026 Nyang"
            android:layout_gravity="center"
            android:textStyle="italic"
            android:textSize="25sp"
            android:textColor="#97733F"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="서울동물복지지원 마포센터"
        android:textColor="@color/font_brown"
        android:textSize="30sp"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapoMapView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/white_round_adopt_background"
        android:layout_marginTop="40dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="61dp"
                android:layout_marginLeft="20dp"
                android:text="주소"
                android:textStyle="bold"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mapo_adress"
                android:textColor="@color/hjm_black"
                android:textSize="15sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="대중교통 이용"
                android:textStyle="bold"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mapo_tranceport"
                    android:layout_marginLeft="18dp"
                    android:textColor="@color/hjm_black"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mapo_tranceport2"
                    android:layout_marginLeft="25dp"
                    android:textColor="@color/hjm_black"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mapo_tranceport3"
                    android:layout_marginLeft="25dp"
                    android:textColor="@color/hjm_black"
                    android:textSize="15sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="자가용 이용"
                android:textStyle="bold"
                android:textSize="15sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mapo_car"
                    android:layout_marginLeft="26dp"
                    android:textColor="@color/hjm_black"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mapo_car2"
                    android:layout_marginLeft="26dp"
                    android:textColor="#F44336"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="52dp"
                android:layout_marginLeft="20dp"
                android:text="연락처"
                android:textStyle="bold"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/mapo_phone"
                android:textColor="@color/hjm_black"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>

        <Button
            android:id="@+id/btn_call"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:text="입양 전화문의"
            android:background="@drawable/button_background"
            android:textSize="20sp"
            android:textColor="#5E9125"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>